--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
   </audio>
 </div>
 
-<h1>By Your one and only Mad head 😌✨</h1>
-<p><a href="https://instagram.com/shuence"target="_blank">My Instagram</a></p>
+<h1>From your Mad Head 😌✨</h1>
 </body>
 
 </html>
